@@ -385,6 +385,23 @@ if ($homefmt) {
 		    $config{'compression'} == 3 ? "zip" : "tar";
 	}
 
+# Take a lock on the backup destination, to avoid concurrent backups to
+# the same dest
+local $lockname = $desturl;
+$lockname =~ s/\//_/g;
+$lockname =~ s/\s/_/g;
+if (!-d $backup_locks_dir) {
+	&make_dir($backup_locks_dir, 0700);
+	}
+local $lockfile = $backup_locks_dir."/".$lockname;
+if (&test_lock($lockfile)) {
+	local $lpid = &read_file_contents($lockfile.".lock");
+	chomp($lpid);
+	&$second_print(&text('backup_esamelock', $lpid));
+	return (0, 0, $doms);
+	}
+&lock_file($lockfile);
+
 # Go through all the domains, and for each feature call the backup function
 # to add it to the backup directory
 local $d;
@@ -837,6 +854,9 @@ if ($ok) {
 			      join(" ", map { $_->{'dom'} } @errdoms)));
 		}
 	}
+
+# Release lock on dest file
+&unlock_file($lockfile);
 
 return ($ok, $sz, \@errdoms);
 }
